# developers

./: .gitlab-ci.yml  docker-compose-prod.yml  docker-compose-sandbox.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
app/: main.py
app/api/v1/: hello.py
deploy/local/: Dockerfile  entrypoint.sh
deploy/prod/: Dockerfile
deploy/sandbox/: Dockerfile  entrypoint.sh
